@@ -64,6 +64,7 @@ Package org.springframework.webflow.executor
   FlowAction and FlowPhaseListener to use it.
 * JSF flow execution lifecycle now respects flow execution locking contract (SWF-229, SWF-276).
 * Fixed bug in FlowPhaseListener that resulted in a NPE on a flow that started and ended in the same request (SWF-273).
+* Added FlowIdMappingArgumentHandlerWrapper (SWF-204).
 
 Package org.springframework.webflow.test
 * Added constructor taking test name argument to AbstractFlowExecutionTests, AbstractExternalizedFlowExecutionTests
